--- a/ui.ui
+++ b/ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>984</width>
-    <height>796</height>
+    <width>1440</width>
+    <height>855</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -164,6 +164,12 @@
                       <horstretch>0</horstretch>
                       <verstretch>0</verstretch>
                      </sizepolicy>
+                    </property>
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>150</height>
+                     </size>
                     </property>
                    </widget>
                   </item>
@@ -925,7 +931,7 @@ color: rgb(255, 255, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>984</width>
+     <width>1440</width>
      <height>20</height>
     </rect>
    </property>
