--- a/ui.ui
+++ b/ui.ui
@@ -171,6 +171,12 @@
                       <height>150</height>
                      </size>
                     </property>
+                    <property name="horizontalScrollBarPolicy">
+                     <enum>Qt::ScrollBarAlwaysOff</enum>
+                    </property>
+                    <property name="sizeAdjustPolicy">
+                     <enum>QAbstractScrollArea::AdjustToContents</enum>
+                    </property>
                    </widget>
                   </item>
                  </layout>
