--- a/ui.ui
+++ b/ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1530</width>
-    <height>1053</height>
+    <width>1310</width>
+    <height>1073</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -102,7 +102,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>icons8-user-48.png</pixmap>
+             <pixmap>icons8-screen-50.png</pixmap>
             </property>
             <property name="scaledContents">
              <bool>true</bool>
@@ -529,7 +529,7 @@ color: rgb(0, 255, 255);</string>
                   <item>
                    <widget class="QLabel" name="label_20">
                     <property name="styleSheet">
-                     <string notr="true">color: rgb(170, 0, 0);</string>
+                     <string notr="true">color: rgb(255, 0, 0);</string>
                     </property>
                     <property name="text">
                      <string>ABP</string>
@@ -605,7 +605,7 @@ color: rgb(0, 255, 255);</string>
                            </font>
                           </property>
                           <property name="styleSheet">
-                           <string notr="true">color: rgb(170, 0, 0);</string>
+                           <string notr="true">color: rgb(255, 0, 0);</string>
                           </property>
                           <property name="text">
                            <string>ABP Syst</string>
@@ -626,7 +626,7 @@ color: rgb(0, 255, 255);</string>
                         </font>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">color: rgb(170, 0, 0);</string>
+                        <string notr="true">color: rgb(255, 0, 0);</string>
                        </property>
                        <property name="text">
                         <string>120/80</string>
@@ -656,7 +656,7 @@ color: rgb(0, 255, 255);</string>
                         </font>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">color: rgb(170, 0, 0);</string>
+                        <string notr="true">color: rgb(255, 0, 0);</string>
                        </property>
                        <property name="text">
                         <string>93</string>
@@ -875,18 +875,46 @@ color: rgb(255, 255, 0);</string>
               </property>
               <layout class="QHBoxLayout" name="horizontalLayout_2">
                <item>
-                <widget class="QWidget" name="widget_3" native="true">
+                <widget class="QWidget" name="AF_widget" native="true">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>60</height>
+                  </size>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QWidget{
+background-color : rgb(38,38,59);
+
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);}</string>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_9">
                   <item>
                    <widget class="QLabel" name="label_4">
+                    <property name="font">
+                     <font>
+                      <pointsize>12</pointsize>
+                     </font>
+                    </property>
+                    <property name="layoutDirection">
+                     <enum>Qt::LeftToRight</enum>
+                    </property>
+                    <property name="styleSheet">
+                     <string notr="true">color: white;</string>
+                    </property>
                     <property name="text">
-                     <string>Alarm 1</string>
+                     <string>Atrial fibrillation</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignCenter</set>
                     </property>
                    </widget>
                   </item>
@@ -894,18 +922,43 @@ color: rgb(255, 255, 0);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QWidget" name="widget_5" native="true">
+                <widget class="QWidget" name="VT_widget" native="true">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>60</height>
+                  </size>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QWidget{
+background-color : rgb(38,38,59);
+
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);}</string>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_27">
                   <item>
                    <widget class="QLabel" name="label_36">
+                    <property name="font">
+                     <font>
+                      <pointsize>12</pointsize>
+                     </font>
+                    </property>
+                    <property name="styleSheet">
+                     <string notr="true">color: white;</string>
+                    </property>
                     <property name="text">
-                     <string>Alarm 2</string>
+                     <string>Ventricular Tachycardia</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignCenter</set>
                     </property>
                    </widget>
                   </item>
@@ -913,18 +966,46 @@ color: rgb(255, 255, 0);</string>
                 </widget>
                </item>
                <item>
-                <widget class="QWidget" name="widget_4" native="true">
+                <widget class="QWidget" name="bradycardia_widget" native="true">
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
                  </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>60</height>
+                  </size>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">QWidget{
+background-color : rgb(38,38,59);
+	
+
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+}</string>
+                 </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_23">
                   <item>
                    <widget class="QLabel" name="label_32">
+                    <property name="font">
+                     <font>
+                      <pointsize>12</pointsize>
+                     </font>
+                    </property>
+                    <property name="styleSheet">
+                     <string notr="true">color: white;</string>
+                    </property>
                     <property name="text">
-                     <string>Alarm 3</string>
+                     <string>bradycardia</string>
+                    </property>
+                    <property name="alignment">
+                     <set>Qt::AlignCenter</set>
                     </property>
                    </widget>
                   </item>
@@ -978,7 +1059,7 @@ color: rgb(255, 255, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1530</width>
+     <width>1310</width>
      <height>20</height>
     </rect>
    </property>
