--- a/ui.ui
+++ b/ui.ui
@@ -1051,6 +1051,9 @@ background-color : rgb(38,38,59);
                </item>
                <item>
                 <widget class="QPushButton" name="load_btn">
+                 <property name="styleSheet">
+                  <string notr="true">color: white; background-color : rgb(38,38,59);</string>
+                 </property>
                  <property name="text">
                   <string>Load Data</string>
                  </property>
