--- a/ui.ui
+++ b/ui.ui
@@ -51,7 +51,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>icons8-user-48.png</pixmap>
+             <pixmap>icons/icons8-user-48.png</pixmap>
             </property>
             <property name="scaledContents">
              <bool>true</bool>
@@ -102,7 +102,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>icons8-screen-50.png</pixmap>
+             <pixmap>icons/icons8-screen-50.png</pixmap>
             </property>
             <property name="scaledContents">
              <bool>true</bool>
@@ -254,7 +254,7 @@
                            <string/>
                           </property>
                           <property name="pixmap">
-                           <pixmap>icons8-heart-30.png</pixmap>
+                           <pixmap>icons/icons8-heart-30.png</pixmap>
                           </property>
                           <property name="scaledContents">
                            <bool>true</bool>
